# yap

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
src/: checker.rs  cli.rs  init.rs  main.rs  utils.rs
src/align/: mod.rs
src/assembly/: asm_io.rs  cleaner.rs  finder.rs  mod.rs  parser.rs  runner.rs
src/cli/: args.rs  cli.rs
src/map/: mod.rs
src/qc/: cli.rs  init.rs  io.rs  mod.rs  parser.rs  qc_io.rs  runner.rs  tag.rs  utils.rs
src/stats/: fasta.rs  fastq.rs  input.rs  math.rs  mod.rs  output.rs  sequence.rs
src/utils/: checker.rs
test_files/qc/: dual_index_test.csv  invalid.csv  invalid_multi_cols.csv  parse_csv_pattern_test.csv  parse_csv_test.csv  test_rename.csv  yap-qc_input.conf
