[package]
name = "yap"
version = "0.1.0"
authors = ["Heru Handika <herubiolog@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.3"
chrono = "0.4.19"
glob = "0.3.0"
num_cpus = "1.13.0"
sysinfo = "0.16.4"
spinners = "1.2.0"
walkdir = "2.3.1"
assert_approx_eq = "1.1.0"
flate2 = "1.0.19"
num-format = "0.4.0"
rayon = "1.5.0"
regex = "1.4.5"
lazy_static = "1.4.0"


[[bin]]
name = "yap"
path = "src/main.rs"
