[package]
name = "yap"
version = "0.2.0"
authors = ["Heru Handika <herubiolog@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A cli app for phylogenomics"
readme = "README.md"
homepage = "https://github.com/hhandika/yap"
keywords = ["cli", "utility", "pipeline", "genomics", "phylogenomics"]
categories = ["command-line-utilities", "science"]

[dependencies]
clap = "2.33.3"
chrono = "0.4.19"
glob = "0.3.0"
num_cpus = "1.13.0"
sysinfo = "0.16.4"
indicatif = "0.16.*"
walkdir = "2.3.1"
assert_approx_eq = "1.1.0"
flate2 = "1.0.19"
num-format = "0.4.0"
rayon = "1.5.0"
regex = "1.4.5"
lazy_static = "1.4.0"
log = "0.4.14"
log4rs = "1.0.0"
